src/test/run-pass/issue-1516.rs
// xfail-test
fn main() {  let early_error: fn@(str) -> !  = {|msg| fail }; }

